Using virtual threads (#129)